added "send/listen messages user to user" feature

--- a/app/src/main/res/navigation/routes.xml
+++ b/app/src/main/res/navigation/routes.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.messenger.RegisterFragment"
+        android:name="com.example.messenger.registerlogin.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.messenger.LoginFragment"
+        android:name="com.example.messenger.registerlogin.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -33,7 +33,7 @@
     </fragment>
     <activity
         android:id="@+id/homeActivity"
-        android:name="com.example.messenger.HomeActivity"
+        android:name="com.example.messenger.messages.HomeActivity"
         android:label="activity_home"
         tools:layout="@layout/activity_home" />
 </navigation>
