--- a/app/src/main/res/layout/chat_to_user_row.xml
+++ b/app/src/main/res/layout/chat_to_user_row.xml
@@ -8,10 +8,14 @@
     <TextView
         android:id="@+id/textViewMessage"
         android:layout_width="0dp"
+        android:background="@drawable/round_message_to"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:textColor="#090909"
         android:maxWidth="240dp"
         android:padding="16dp"
-        android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
